ops/deploy/base/api/spring-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: spring-api
  name: spring-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spring-api
    spec:
      nodeSelector:
        node.kubernetes.io/class_id: app
      affinity:
        podAntiAffinity: # eventual placement to avoid pod with traefik on it
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: traefik  # traefik loadbalancer
                namespaces:
                  - kube-system
                topologyKey: "kubernetes.io/hostname"
      imagePullSecrets:
        - name: regcred
      containers:
        - image: 058264272856.dkr.ecr.us-east-2.amazonaws.com/311crimemap/api:0.0.1-SNAPSHOT
          name: spring-api
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1Gi"        # Minimum memory requested
            limits:
              memory: "3Gi"        # Maximum memory allowed
