ops/deploy/base/api/spring-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-api-service
spec:
  selector:
    app: spring-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
